--- a/css/contact.css
+++ b/css/contact.css
@@ -5,44 +5,41 @@ background-image: url("https://st2.depositphotos.com/9471600/12268/i/950/deposit
 }
 
 .page_header{
+    position: relative;
     background: #DAF7A6;
-    padding: 50px;  
-    text-align: right;
-    margin: 10px;
+    padding: 40px;  
+    /*text-align: center;*/
+    margin: 30px;
     border: 4px solid azure;
-  }
-
-  .style_a{
     font-weight: bold;
     text-decoration: none;
     font-size: 20px;
     color: #273746;
-}
-
-.header_div1{
-    float: left;
-    width: 30%;
-    /*border: 2px solid #757793;*/
-    text-align: right;
-}
-.header_div2{
-    float: left;
-    width: 20%;
-    /*border: 2px solid blue;*/
-    text-align: center;
-    /*font-family: 'Kaushan Script', cursive;
-    font-size: 20px;*/
+}  
+    
+ 
+.style_a{
     font-weight: bold;
+    text-decoration: none;
     font-size: 20px;
     color: #273746;
+    float: right;
+   
 }
-.header_div3{
-    float: left;
-    width: 45%;
-    /*border: 2px solid red;*/
-    text-align: right;
-    padding: 25px;
+.style_a1{
+    position: absolute;
+    font-size: 35px;
+    position: absolute;
+    left: 500px;
+    background: #FCF3CF;
+    top: 5px;
+    padding: 15px;
+  
+    
 }
+
+
+
 
 .form_div{
     background: #DAF7A6;
@@ -60,7 +57,7 @@ background-image: url("https://st2.depositphotos.com/9471600/12268/i/950/deposit
 
 .form_body {
     border-radius: 5px;
-    background-color: azure;
+    background: #FCF3CF;
     /*padding: 30px 30px 50px 30px;*/
     margin: 0 auto;
     width:450px;
